--- a/AppGestionEditorial/Web/Site1.Master
+++ b/AppGestionEditorial/Web/Site1.Master
@@ -1,16 +1,32 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="AppGestionEditorial.Web.Site1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="App.Web.Site1" %>
 
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
+    <title>App Gestion Editorial</title>
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <link href="../Content/bootstrap.min.css" rel="stylesheet" />
-    <script src="../Scripts/jquery-2.1.3.js" ></script>
+    <link href="../Content/style.css" rel="stylesheet" />
+
+
+    <script src="../Scripts/jquery-2.1.3.js"></script>
+    <script src="../Scripts/bootstrap.min.js"></script>
+    <script src="../Scripts/bootstrapValidator.min.js"></script>
+
+    <link rel="stylesheet" href="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.min.css
+"/>
+<script src="//oss.maxcdn.com/momentjs/2.8.2/moment.min.js"></script>
+<script src="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/src/js/bootstrap-datetimepicker.js"></script>
+
+    <script src="../Scripts/permisos.js"></script>
+    <script src="../Scripts/validator.js"></script>
+
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+
 </head>
 <body>
 
@@ -18,12 +34,12 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="Index.aspx">Principal</a></li>
-            <li role="presentation"><a href="create.aspx">boton1</a></li>
-            <li role="presentation"><a href="list.aspx">boton2</a></li>
+            <li role="presentation" class="active"><a href="Default.aspx">Principal</a></li>
+            <li role="presentation"><a href="Create.aspx">Crear</a></li>
+            <li role="presentation"><a href="Clientes.aspx">Clientes</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">App Gestion Bancaria</h3>
+        <h3 class="text-muted">App Gestion Editorial</h3>
       </div>
 
 
